# neuralyze

./: README.md  index.html  package-lock.json  package.json  test.ddb  test.nz
src/: App.svelte  Dendrite.svelte  Node.svelte  app.css  dendrite.ts  neuron.ts  node.ts  rdendrite.ts  store.ts  tdendrite.ts
src-tauri/: Cargo.toml  tauri.conf.json  test.ddb
src-tauri/src/: ann.rs  dbmu.rs  lib.rs  main.rs  rustpp.rs
